Fix for summary card overlap

--- a/src/frontend/app/features/cloud-foundry/tabs/cloud-foundry-summary-tab/cloud-foundry-summary-tab.component.scss
+++ b/src/frontend/app/features/cloud-foundry/tabs/cloud-foundry-summary-tab/cloud-foundry-summary-tab.component.scss
@@ -2,4 +2,10 @@
   display: flex;
   height: 100%;
   width: 100%;
+  &__fixed-panel {
+    flex: 0 0 auto;
+  }
+  &__panel-apps {
+    min-height: 200px;
+  }
 }
